# liteflow

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: ray_executor_example.py
src/liteflow/: __init__.py  executor.py
src/pyflow/: flow.py
tests/: conftest.py  test_executor.py  test_flow.py  test_ray_executor.py
